k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: settlr-web
  namespace: settlr-prod
  labels:
    app.kubernetes.io/name: settlr
    app.kubernetes.io/component: web
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: settlr-web
  template:
    metadata:
      labels:
        app: settlr-web
    spec:
      containers:
        - name: settlr
          image: ghcr.io/ajaygummalla20/settlr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /login
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /login
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 2
