k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: settlr-ingress
  namespace: settlr-prod
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "15m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - usesettlr.in
        - www.usesettlr.in
      secretName: usesettlr-tls
  rules:
    - host: usesettlr.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: settlr-service
                port:
                  number: 80
    - host: www.usesettlr.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: settlr-service
                port:
                  number: 80
